What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

October 07, 2011
* [mickael] WIP: correct wrong input in dump_codec function and add missing return value
* [mickael] WIP: correct mistake inside set_decoded_area function (credit to Francois De Vieilleville)
+ [mickael] WIP: backport rev 967-969 from opj-1.5 to trunk about test suite enhancement and rename of opj_configh.cmake.in

October 06, 2011
* [mickael] WIP: fix build errors with windows configuration induced by rev 960
+ [mickael] WIP: Enhance html documentation generation with cmake, add a mainpage to this documentation and bump version to 1.99.0 into the main CMakeLists (as rev951)

October 05, 2011
+ [mickael] WIP: fix the decoding process with conformance files and V2 framework 

September 30, 2011
* [vincent] fix autotools for various compilation problems
* [vincent] fix indexer compilation. Patch from Winfried
* [kaori] modified indexer for JPIP, JPP-stream

September 27, 2011
+ [mickael] WIP: enhance the event management into the new API
* [mickael] WIP: fix some warnings about a static function and j2k_read_unk_v2
+ [mickael] WIP: add basis for a new output management of the codestream information and index
* [mickael] WIP: fix some warnings from j2k_dump and index.c

September 22, 2011
* [mickael] WIP: fix build compilation (with autotools) with MJ2 option (credit to Winfried) 
* [mickael] WIP: fix build compilation error with windows platform about event_mgr management. 

September 21, 2011
+ [mickael] WIP: clean the j2k_dump application and the lib regards to the event management
+ [mickael] Enhance the support of endianess with cmake and inside the code (credit to Winfried) 

September 20, 2011
* [mickael] WIP: fixed build issues with MJ2 option ON
* [mickael] WIP: fixed build issues with JPWL option ON

September 19, 2011
+ [mickael] Enhance some new JPIP files about opj_config inclusion and using of free/calloc (credit to Julien Malik) 